# spectral-pathtracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: acceleration_ds.hpp  constants.hpp  geometry.hpp  gpu_ds.hpp  intersect.hpp  io.hpp  materials.hpp  renderer.hpp
src/: acceleration_ds.cpp  io.cpp  main.cpp  renderer.hip
